2009-03-08 [paul]	0.24.0cvs1

	* configure.ac
	* po/ja.po
		add Japanese translation, submitted by kazken3

2008-12-19 [paul]	0.24.0

	0.24 released

2009-03-06 [paul]	0.23.0cvs2

	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/pt_BR.po
		updated by Flammie Pirinen, Colin Leroy, Pader Rezso,
		and Frederico Goncalves Guimaraes

2009-01-11 [paul]	0.23.0cvs1

	* src/rssyl_cb_menu.c
		trim the label but not the entry in the
		Rename dialog

2008-12-19 [paul]	0.23.0

	0.23 released

2008-12-19 [paul]	0.22.0cvs6

	* po/cs.po
	* po/ru.po
		updated by David Vachulka, Aleksei Miheev

2008-12-07 [paul]	0.22.0cvs5

	* configure.ac
		check for compiler before setting CFLAGS
		prohibit gcc4's signedness warnings
		clean up check for curl

2008-11-28 [colin]	0.22.0cvs4

	* po/fr.po
		Update

2008-11-26 [colin]	0.22.0cvs3

	* src/feed.c
		Don't fetch comments on feed items that
		have no id.

2008-11-16 [colin]	0.22.0cvs2

	* src/feed.c
	* src/feedprops.c
	* src/feedprops.h
	* src/rssyl.c
	* src/rssyl.h
	* src/rssyl_gtk.c
	* src/rssyl_gtk.h
		Add a feed property to be able to fetch only comments
		on posts aged less than X days

2008-11-14 [colin]	0.22.0cvs1

	* src/feed.c
		Fix threading of comments with newer
		Wordpress blogs

2008-10-10 [paul]	0.22

	0.22 released

2008-10-04 [colin]	0.21.0cvs2

	* src/claws.def
		Fix symbols

2008-10-04 [colin]	0.21.0cvs1

	* src/plugin.c
		Win32: set translation dir

2008-10-03 [paul]	0.21

	0.21 released

2008-10-03 [paul]	0.20.0cvs19

	* configure.ac
	* po/ru.po
		added by Aleksei Miheev
	* po/ca.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
		updated by Miquel Oliete, Flammie Pirinen,
		Colin Leroy, Pader Rezo

2008-09-30 [colin]	0.20.0cvs18

	* src/date.c
		Fix time usage

2008-09-28 [colin]	0.20.0cvs17

	* src/claws.def
	* src/feed.c
		Don't use mkstemp on Win32

2008-09-28 [colin]	0.20.0cvs16

	* src/claws.def
		Fix def file

2008-09-28 [colin]	0.20.0cvs15

	* src/date.c
		Don't use strptime on windows

2008-09-28 [colin]	0.20.0cvs14
